nginx-ingress-contoller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /headlamp
        pathType: Prefix
        backend:
          service:
            name: headlamp
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: nginx-service  # 연결할 Service 이름
            port:
              number: 80         # Service의 port 번호
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: nginx-service  # 연결할 Service 이름
            port:
              number: 80         # Service의 port 번호
      - path: /static
        pathType: Prefix
        backend:
          service:
            name: nginx-service  # 연결할 Service 이름
            port:
              number: 80         # Service의 port 번호
      - path: /media
        pathType: Prefix
        backend:
          service:
            name: nginx-service  # 연결할 Service 이름
            port:
              number: 80         # Service의 port 번호
